# schema-registry-client

./: CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: cicd.yml
examples/: register_and_fetch.rs
src/: errors.rs  lib.rs  schema.rs  serde_ext.rs
src/client/: admin.rs  consumer.rs  mod.rs  producer.rs  response_ext.rs  srclient.rs  types.rs
src/schema_registry/: client.rs  types.rs
src/schema_registry_client/: client.rs  mod.rs  response_ext.rs  serde_ext.rs  types.rs
tests/data/: schema2.avsc
