[package]
name = "schema-registry-client"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## Error handling
thiserror = "1.0"

## HTTP Client
isahc = { version = "1.7.0", default-features = false, features = [
    "json",
    "static-ssl",
    "static-curl",
    "http2",
    "text-decoding",
] }

## Serialize/Deserialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.24.0", features = ["derive"] }

avro-rs = { git = "https://github.com/ansrivas/avro", tag = "v0.14.0-dev1" }
dashmap = "5.2.0"
async-trait = "0.1.53"

## Logging
tracing = "0.1"


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
async-trait = "0.1.53"
