[package]
name = "schema-registry-client"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## Error handling
thiserror = "1.0"

## HTTP Client
isahc = { version = "1.7.0", default-features = false, features = [
    "json",
    "static-ssl",
    "static-curl",
    "http2",
    "text-decoding",
] }

## Serialize/Deserialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.24.0", features = ["derive"] }

avro-rs = { version = "0.13.0" }
async-trait = "0.1.53"

## Logging
tracing = "0.1"
async-lock = "2.5.0"

futures-lite = "1.12.0"

### Kafka optional
[dependencies.rdkafka]
features = ["cmake-build", "libz-static", "gssapi-vendored", "ssl-vendored"]
version = "0.28.0"


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
async-trait = "0.1.53"
