[package]
name = "schema-registry-client"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## Error handling
thiserror = "2.0"

## HTTP Client
isahc = { version = "1.7", default-features = false, features = [
    "json",
    "static-ssl",
    "static-curl",
    "http2",
    "text-decoding",
] }

## Serialize/Deserialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }

apache-avro = { version = "0.19.0" }

async-trait = "0.1"

## Logging
tracing = "0.1"
async-lock = "3.0"


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.9"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
async-trait = "0.1"
